--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^9.0"
+        "laravel/framework": ">=9.0"
     },
     "config": {
         "php": "^8.1",
