--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,9 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "mockery/mockery": "^1.6",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpcov": "^9.0",
+        "phpunit/phpunit": "^10.0",
+        "friendsofphp/php-cs-fixer": "3.*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
